feat: add unblock user functionality and update block user logic in profile header

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -200,10 +200,17 @@
           <mat-icon>warning</mat-icon>
           <span>Report User</span>
         </button>
+        @if (isUserBlocked()) {
+        <button mat-menu-item (click)="blockUser()">
+          <mat-icon>check_circle</mat-icon>
+          <span>Unblock User</span>
+        </button>
+        } @else {
         <button mat-menu-item (click)="blockUser()">
           <mat-icon>block</mat-icon>
           <span>Block User</span>
         </button>
+        }
         }
       </mat-menu>
 
