--- a/src/app/app.html
+++ b/src/app/app.html
@@ -344,7 +344,7 @@
               }
             }
 
-            @if (accountState.premium()) {
+            @if (accountState.hasActiveSubscription()) {
               <span class="premium-label">Premium</span>
               <div class="premium-expires">
                 Expires {{ accountState.expiresWhen() | date: 'MMM d' }}
