--- a/src/app/components/link/link.html
+++ b/src/app/components/link/link.html
@@ -1,14 +1,7 @@
 @if (link()) {
-  <a
-    (click)="navigateToEvent()"
-    (keydown.enter)="navigateToEvent()"
-    (keydown.space)="navigateToEvent()"
-    matTooltipPosition="below"
-    [matTooltip]="event().created_at * 1000 | date: 'medium'"
-    class="app-link"
-    tabindex="0"
-    role="link"
-  >
-    {{ event().created_at | ago }}
-  </a>
+<a (click)="navigateToEvent()" (keydown.enter)="navigateToEvent()" (keydown.space)="navigateToEvent()"
+  matTooltipPosition="below" [matTooltip]="canHover() ? (event().created_at * 1000 | date: 'medium') : ''"
+  [matTooltipDisabled]="!canHover()" class="app-link" tabindex="0" role="link">
+  {{ event().created_at | ago }}
+</a>
 }
