--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,17 +11,13 @@ html {
   --scrollbar-thumb: #c1c1c1;
   --scrollbar-thumb-hover: #a1a1a1;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: light,
+  @include mat.theme((color: (theme-type: light,
         primary: nostria-theme.$primary-palette,
         tertiary: nostria-theme.$tertiary-palette,
       ),
       typography: Roboto,
       density: 0,
-    )
-  );
+    ));
 }
 
 .dark {
@@ -34,14 +30,10 @@ html {
   --scrollbar-thumb: #686868;
   --scrollbar-thumb-hover: #7e7e7e;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: dark,
+  @include mat.theme((color: (theme-type: dark,
         primary: nostria-theme.$primary-palette,
       ),
-    )
-  );
+    ));
 }
 
 // Global styles
@@ -997,3 +989,6 @@ app-media-queue .media-list mat-list {
     margin: 0;
   }
 }
+
+// Import component-specific global styles
+@import './app/components/whats-new-dialog/whats-new-dialog-global.scss';
