feat: add event menu to Article Page
So that we can republish, copy id, delete, report etc

Changes:
- EventMenu componenent now has optional input argument 'view' which
can be 'icon' or 'full'. The latter renders the label as well. Default view is 'icon'

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -1,6 +1,23 @@
-<button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More options" (click)="$event.stopPropagation()">
-  <mat-icon>more_vert</mat-icon>
-</button>
+@if (view() === 'full') {
+  <button
+    mat-button
+    [matMenuTriggerFor]="menu"
+    aria-label="More options"
+    (click)="$event.stopPropagation()"
+  >
+    <mat-icon>more_vert</mat-icon>
+    More options
+  </button>
+} @else {
+  <button
+    mat-icon-button
+    [matMenuTriggerFor]="menu"
+    aria-label="More options"
+    (click)="$event.stopPropagation()"
+  >
+    <mat-icon>more_vert</mat-icon>
+  </button>
+}
 <mat-menu #menu="matMenu">
   <button mat-menu-item (click)="layout.copyToClipboard(eventLink(), 'text')">
     <mat-icon>link</mat-icon>
@@ -29,10 +46,10 @@
   </button>
   <mat-divider></mat-divider>
   @if (isOurEvent()) {
-  <button mat-menu-item (click)="deleteEvent()">
-    <mat-icon>delete</mat-icon>
-    Delete Event
-  </button>
+    <button mat-menu-item (click)="deleteEvent()">
+      <mat-icon>delete</mat-icon>
+      Delete Event
+    </button>
   }
   <button mat-menu-item (click)="layout.publishEvent(event())">
     <mat-icon>publish</mat-icon>
@@ -44,9 +61,9 @@
     Report Content
   </button>
   @if (event().pubkey !== accountState.pubkey()) {
-  <button mat-menu-item (click)="accountState.mutePubkey(event().pubkey);">
-    <mat-icon>block</mat-icon>
-    <span>Block User</span>
-  </button>
+    <button mat-menu-item (click)="accountState.mutePubkey(event().pubkey)">
+      <mat-icon>block</mat-icon>
+      <span>Block User</span>
+    </button>
   }
 </mat-menu>
