--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -119,6 +119,8 @@
           <mat-icon>comment</mat-icon>
           Comment
         </button>
+
+        <app-event-menu [event]="article" [view]="'full'"></app-event-menu>
       </div>
     </footer>
   </div>
