--- a/src/styles.scss
+++ b/src/styles.scss
@@ -987,6 +987,9 @@ app-media-queue .media-list mat-list {
 
   .mat-icon {
     margin: 0;
+    height: 24px;
+    width: 24px;
+    font-size: 24px;
   }
 }
 
