--- a/src/app/components/reported-content/reported-content.component.html
+++ b/src/app/components/reported-content/reported-content.component.html
@@ -5,25 +5,29 @@
         <mat-icon class="warning-icon">flag</mat-icon>
         <div class="reported-message">
           <h3>Content Reported</h3>
-          <p>This content has been reported {{ getTotalReports() }} time{{ getTotalReports() !== 1 ? 's' : '' }}.</p>
+          <p>
+            This content has been reported {{ getTotalReports() }} time{{
+              getTotalReports() !== 1 ? 's' : ''
+            }}.
+          </p>
         </div>
       </div>
 
       @if (getTopReportTypes().length > 0 && !isLoadingReports()) {
-      <div class="report-types">
-        <p class="report-types-label">Reported as:</p>
-        <div class="report-chips">
-          @for (reportType of getTopReportTypes(); track reportType.type) {
-          <mat-chip class="report-chip" [class]="'report-type-' + reportType.type">
-            <mat-icon>{{ getReportTypeIcon(reportType.type) }}</mat-icon>
-            {{ getReportTypeLabel(reportType.type) }}
-            @if (reportType.count > 1) {
-            <span class="report-count">{{ reportType.count }}</span>
+        <div class="report-types">
+          <p class="report-types-label">Reported as:</p>
+          <div class="report-chips">
+            @for (reportType of getTopReportTypes(); track reportType.type) {
+              <mat-chip class="report-chip" [class]="'report-type-' + reportType.type">
+                <mat-icon>{{ getReportTypeIcon(reportType.type) }}</mat-icon>
+                {{ getReportTypeLabel(reportType.type) }}
+                @if (reportType.count > 1) {
+                  <span class="report-count">{{ reportType.count }}</span>
+                }
+              </mat-chip>
             }
-          </mat-chip>
-          }
+          </div>
         </div>
-      </div>
       }
 
       <div class="reported-actions">
