--- a/src/app/pages/feeds/feeds.component.scss
+++ b/src/app/pages/feeds/feeds.component.scss
@@ -185,7 +185,8 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {}
+      &::-webkit-scrollbar-thumb {
+      }
 
       .column-selector-button {
         display: flex;
@@ -204,10 +205,12 @@ app-user-profile {
         &.active {
           // background-color: var(--mat-sys-primary);
 
-          mat-icon {}
+          mat-icon {
+          }
         }
 
-        &:hover:not(.active) {}
+        &:hover:not(.active) {
+        }
 
         &.add-column {
           min-width: 40px;
@@ -841,7 +844,8 @@ app-user-profile {
           background-color: var(--mat-sys-primary);
         }
 
-        &:hover:not(.active) {}
+        &:hover:not(.active) {
+        }
       }
     }
 
@@ -979,7 +983,8 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {}
+      &::-webkit-scrollbar-thumb {
+      }
 
       // Prevent reflow during drag
       &.cdk-drop-list-dragging {
@@ -1031,7 +1036,8 @@ app-user-profile {
         }
       }
 
-      &:hover:not(.active):not(.add-tab) {}
+      &:hover:not(.active):not(.add-tab) {
+      }
 
       &.add-tab {
         padding: 12px 8px;
