refactor: remove tooltip functionality and simplify link component, avoiding touch-interuption on touch devices.

--- a/src/app/components/link/link.html
+++ b/src/app/components/link/link.html
@@ -3,9 +3,7 @@
     (click)="navigateToEvent()"
     (keydown.enter)="navigateToEvent()"
     (keydown.space)="navigateToEvent()"
-    matTooltipPosition="below"
-    [matTooltip]="canHover() ? (event().created_at * 1000 | date: 'medium') : ''"
-    [matTooltipDisabled]="!canHover()"
+    [title]="event().created_at * 1000 | date: 'medium'"
     class="app-link"
     tabindex="0"
     role="link"
