--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -121,6 +121,7 @@ input {
   align-self: center;
   flex: 2 2 auto;
   -webkit-app-region: no-drag;
+  app-region: no-drag;
 }
 
 .media-audio-container {
